# gpt-prompt-chainer

./: .pre-commit-config.yaml  app.py  app_bckp.py  main.py  pyproject.toml  utils.py
services/: gpt_service.py
templates/: default.txt  write_python_code.txt
tests/: test_fizzbuzz.py
